--- a/am-website/angular.json
+++ b/am-website/angular.json
@@ -25,7 +25,8 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/assets/sass/paper-kit.scss"
+              "src/assets/sass/paper-kit.scss",
+              "src/assets/css/nucleo-icons.css"
             ],
             "scripts": []
           },
